feat: 添加部分配置
Change-Id: Iee65bca373df1ff009d0ff68aa440cf37e19a8d6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,13 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "./dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "target": "ES2017",
+    "allowJs": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "node_modules/puppeteer-tsd/src/grpc.d.ts"
   ],
   "exclude": [
     "node_modules",
